Start an instance of Redis owned by Onitu

--- a/onitu.ini
+++ b/onitu.ini
@@ -1,6 +1,6 @@
 [watcher:redis]
-cmd = redis-server
+cmd = redis-server redis/redis.conf
 
 [watcher:onitu]
 cmd = python2
-args = -m onitu $(circus.endpoint)
+args = -m onitu
