Big update. File transfer is now working.

--- a/onitu.ini
+++ b/onitu.ini
@@ -1,6 +1,10 @@
 [watcher:redis]
 cmd = redis-server redis/redis.conf
 
+[watcher:referee]
+cmd = python2
+args = -m onitu.referee
+
 [watcher:onitu]
 cmd = python2
 args = -m onitu
