Add copy_env in watchers for Circus 0.10

--- a/onitu.ini
+++ b/onitu.ini
@@ -7,7 +7,9 @@ cmd = redis-server redis/redis.conf
 [watcher:onitu]
 cmd = python2.7
 args = -m onitu
+copy_env = True
 
 [watcher:referee]
 cmd = python2.7
 args = -m onitu.referee
+copy_env = True
