Remove Core, replace it by a simple loading script

--- a/onitu.ini
+++ b/onitu.ini
@@ -2,12 +2,14 @@
 loglevel = warning
 
 [watcher:redis]
+priority = 1
 cmd = redis-server redis/redis.conf
 
-[watcher:onitu]
+[watcher:loader]
 cmd = python2.7
-args = -m onitu
+args = -m onitu.loader
 copy_env = True
+respawn = False
 
 [watcher:referee]
 cmd = python2.7
