change onitu.ini to make it work on OSX

--- a/onitu.ini
+++ b/onitu.ini
@@ -4,6 +4,7 @@ loglevel = warning
 [watcher:redis]
 priority = 1
 cmd = redis-server redis/redis.conf
+copy_env = True
 
 [watcher:loader]
 cmd = python2.7
