--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,10 @@ install:
   - pip install -r requirements_dev.txt
 # command to run tests
 script: py.test tests
+notifications:
+  email: onitu_2015@labeip.epitech.eu
+  irc:
+      channels:
+        - "chat.freenode.net#onitu"
+      use_notice: true
+      skip_join: true
