--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ install:
   - pip install -r requirements.txt
   - pip install -r requirements_dev.txt
 # command to run tests
-script: py.test tests
+script:
+  - py.test tests
+  - pep8 onitu tests
 notifications:
   email: onitu_2015@labeip.epitech.eu
   irc:
