--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
 script:
   - py.test tests -v
   - pep8 onitu tests
+  - python tests/functional/benchmarks.py
 notifications:
   email: onitu_2015@labeip.epitech.eu
   irc:
