tests: flake8 ignore F401

--- a/tox.ini
+++ b/tox.ini
@@ -14,4 +14,4 @@ commands =
 [testenv:flake8]
 deps =
   flake8
-commands = flake8 onitu tests
+commands = flake8 --ignore=F401 --show-source onitu tests
