[skip ci] benchmarks in tox, add informations in README

--- a/tox.ini
+++ b/tox.ini
@@ -15,3 +15,13 @@ commands =
 deps =
   flake8
 commands = flake8 --ignore=F401 --show-source onitu tests
+
+[testenv:bench]
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements_bench.txt
+
+commands =
+    python tests/functional/benchmarks.py
+
