--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ commands =
 [testenv:flake8]
 deps =
   flake8
-commands = flake8 --ignore=F401 --show-source onitu tests
+commands = flake8 --show-source onitu tests
 
 [testenv:bench]
 deps =
