--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 # as long as we don't have the setup.py
 skipsdist = True
-envlist = py27,flake8
+envlist = py27,py33,flake8
 
-[testenv:py27]
+[testenv]
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
