--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -395,8 +395,8 @@ appendfilename appendonly.aof
 #
 # If unsure, use "everysec".
 
-# appendfsync always
-appendfsync everysec
+appendfsync always
+# appendfsync everysec
 # appendfsync no
 
 # When the AOF fsync policy is set to always or everysec, and a background
