--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
   flake8
 commands = flake8 --show-source onitu tests
 
-[testenv:bench]
+[bench]
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
@@ -25,3 +25,31 @@ deps =
 commands =
     python tests/functional/benchmarks.py
 
+[testenv:py27-bench]
+basepython = python2.7
+
+deps =
+    {[bench]deps}
+
+commands =
+    {[bench]commands}
+
+[testenv:py33-bench]
+basepython = python3.3
+
+deps =
+    {[bench]deps}
+
+commands =
+    {[bench]commands}
+
+
+[testenv:py27-test]
+basepython = python2.7
+deps =
+commands = python --version
+
+[testenv:py33-test]
+basepython = python3.3
+deps =
+commands = python --version
