--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - tox -e $TOX_ENV
 notifications:
   email:
-    - onitu_2015@labeip.epitech.eu
+    - louis.roche@epitech.eu
     - on_success: change
   irc:
       channels:
