Reorganize tests directory

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ deps =
     {[bench]deps}
 
 commands =
-    python tests/functional/sample_benchmark.py
+    python -m tests.benchmarks.sample_benchmark
 
 [testenv:py33-bench]
 basepython = python3.3
@@ -38,4 +38,4 @@ deps =
     {[bench]deps}
 
 commands =
-    python tests/functional/sample_benchmark.py
+    python -m tests.benchmarks.sample_benchmark
