--- a/tox.ini
+++ b/tox.ini
@@ -9,14 +9,14 @@ deps =
     -r{toxinidir}/requirements_dev.txt
 
 commands =
-    py.test tests -v
+    py.test tests/functional -v
 
 [testenv:flake8]
 deps =
   flake8
 commands = flake8 --show-source onitu tests
 
-[bench]
+[benchsetup]
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
@@ -26,16 +26,23 @@ deps =
 basepython = python2.7
 
 deps =
-    {[bench]deps}
+    {[benchsetup]deps}
 
 commands =
-    python -m tests.benchmarks.sample_benchmark
+    py.test tests/benchmarks -v -s
 
 [testenv:py33-bench]
 basepython = python3.3
 
 deps =
-    {[bench]deps}
+    {[benchsetup]deps}
 
 commands =
-    python -m tests.benchmarks.sample_benchmark
+    py.test tests/benchmarks -v -s
+
+[testenv:benchmarks]
+deps =
+    {[benchsetup]deps}
+
+commands =
+    python -m tests.benchmarks.benchmarks
