--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist = py27,py33,flake8
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements_linux.txt
 
 commands =
     py.test tests/functional -v
@@ -16,33 +17,18 @@ deps =
   flake8
 commands = flake8 --show-source onitu tests
 
-[benchsetup]
-deps =
-    -r{toxinidir}/requirements.txt
-    -r{toxinidir}/requirements_dev.txt
-    -r{toxinidir}/requirements_bench.txt
-
 [testenv:py27-bench]
 basepython = python2.7
 
-deps =
-    {[benchsetup]deps}
-
 commands =
-    py.test tests/benchmarks -v -s
+    py.test tests/benchmarks -v
 
 [testenv:py33-bench]
 basepython = python3.3
 
-deps =
-    {[benchsetup]deps}
-
 commands =
-    py.test tests/benchmarks -v -s
+    py.test tests/benchmarks -v
 
 [testenv:benchmarks]
-deps =
-    {[benchsetup]deps}
-
 commands =
     python -m tests.benchmarks.benchmarks
