--- a/tox.ini
+++ b/tox.ini
@@ -17,14 +17,25 @@ deps =
   flake8
 commands = flake8 --show-source onitu tests
 
+[benchsetup]
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements_dev.txt
+
 [testenv:py27-bench]
 basepython = python2.7
+
+deps =
+    {[benchsetup]deps}
 
 commands =
     py.test tests/benchmarks -v
 
 [testenv:py33-bench]
 basepython = python3.3
+
+deps =
+    {[benchsetup]deps}
 
 commands =
     py.test tests/benchmarks -v
