--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
   - TOX_ENV=flake8
   - TOX_ENV=py27
   - TOX_ENV=py33
+  - TOX_ENV=py34
   - TOX_ENV=py27-bench
   - TOX_ENV=py33-bench
 install:
