--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 # as long as we don't have the setup.py
 skipsdist = True
-envlist = py27,py33,flake8
+envlist = py27,py33,py34,flake8
 
 [testenv]
 deps =
