add logbook in benchmarks deps

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands = flake8 --show-source onitu tests
 [benchsetup]
 deps =
     -r{toxinidir}/requirements_dev.txt
+    logbook
 
 [testenv:py27-bench]
 basepython = python2.7
