--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
-before_install: sudo apt-get install leveldb libleveldb-dev
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libleveldb-dev
 python:
   - "2.7"
 env:
