--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
 before_install:
+  - sudo bash -c "echo deb http://archive.ubuntu.com/ubuntu trusty main restricted universe multiverse >> /etc/apt/sources.list"
   - sudo apt-get update -qq
-  - sudo apt-get install -y libleveldb-dev
+  - sudo apt-get install -y libleveldb1 libleveldb-dev
 python:
   - "2.7"
 env:
