Adapt the S3 Driver to Escalator.
* S3 Driver now takes the Onitu root into account.
  The CheckChanges thread now only lists keys that are prefixed with this root.
  The driver now checks that the given root isn't a regular file on the remote
  S3 bucket. S3 doesn't have a concept such as a directory, so it just checks
  that root is a 0-size file.
  Root now defaults to '' in the manifest.

* All filenames passed to the driver are now prefixed wit the onitu root

* No longer uses the TryAgain exception

* Catch in the end_upload handler against empty uploads (e.g. for tests).
  Amazon S3 raises an exception when a MP upload is empty.

* Adapting the tests to make them work. Taking the root into account seems to
  bug the tests. But they run fine with an empty root. So leave it as it is for
  now.

--- a/onitu/drivers/amazon_s3/manifest.json
+++ b/onitu/drivers/amazon_s3/manifest.json
@@ -5,7 +5,8 @@
     "root": {
       "name": "Root",
       "description": "The root of the directories under Onitu's watch",
-      "type": "string"
+      "type": "string",
+      "default": ""
     },
     "bucket": {
       "name": "S3 Bucket",
