Update the metadata on move_file. Remove useless glbal statements.
- Minor change in manifest.json

- Remove setup.json

--- a/onitu/drivers/dropbox/manifest.json
+++ b/onitu/drivers/dropbox/manifest.json
@@ -15,7 +15,7 @@
     },
     "access_secret": {
       "name": "Dropbox Access Token Secret",
-      "description": "The key provided by Dropbox with the OAuth access token.",
+      "description": "The secret provided by Dropbox with the OAuth access token.",
       "type": "string"
     },
     "changes_timer": {
