Adapt tox.ini to the new architecture

--- a/tox.ini
+++ b/tox.ini
@@ -1,45 +1,29 @@
 [tox]
-# as long as we don't have the setup.py
-skipsdist = True
 envlist = py27,py33,py34,flake8
 
 [testenv]
-deps =
-    -r{toxinidir}/requirements_dev.txt
-    -r{toxinidir}/requirements_linux.txt
-
 commands =
+    pip install -e .[tests]
+    pip install -e drivers/local_storage
     py.test tests/functional -v
 
 [testenv:flake8]
-deps =
-    flake8
-
+deps = flake8
 commands = flake8 --show-source onitu tests
-
-[benchsetup]
-deps =
-    -r{toxinidir}/requirements_dev.txt
-    logbook
 
 [testenv:py27-bench]
 basepython = python2.7
-
-deps =
-    {[benchsetup]deps}
-
 commands =
+    pip install -e .[tests,bench]
     py.test tests/benchmarks -v
 
 [testenv:py33-bench]
 basepython = python3.3
-
-deps =
-    {[benchsetup]deps}
-
 commands =
+    pip install -e .[tests,bench]
     py.test tests/benchmarks -v
 
 [testenv:benchmarks]
 commands =
+    pip install -e .[bench]
     python -m tests.benchmarks.benchmarks
