Add the 'drivers' folder to flake8 list in tox

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ commands =
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 --show-source onitu tests
+commands = flake8 --show-source onitu tests drivers
 
 [testenv:py27-bench]
 basepython = python2.7
