Add Circus fork to tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py27,py33,py34,flake8
 
 [testenv]
 commands =
+    pip install git+git://github.com/k4nar/circus.git@onitu
     pip install -e .[tests]
     pip install -e drivers/local_storage
     py.test tests/functional -v
@@ -14,16 +15,19 @@ commands = flake8 --show-source onitu tests drivers
 [testenv:py27-bench]
 basepython = python2.7
 commands =
+    pip install git+git://github.com/k4nar/circus.git@onitu
     pip install -e .[tests,bench]
     py.test tests/benchmarks -v
 
 [testenv:py33-bench]
 basepython = python3.3
 commands =
+    pip install git+git://github.com/k4nar/circus.git@onitu
     pip install -e .[tests,bench]
     py.test tests/benchmarks -v
 
 [testenv:benchmarks]
 commands =
+    pip install git+git://github.com/k4nar/circus.git@onitu
     pip install -e .[bench]
     python -m tests.benchmarks.benchmarks
