Accept ONITU_TEST_DRIVER in tox

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py27,py33,py34,flake8
 commands =
     pip install git+git://github.com/k4nar/circus.git@onitu
     pip install -e .[tests]
-    pip install -e drivers/local_storage
+    pip install -e drivers/{env:ONITU_TEST_DRIVER:local_storage}
     py.test tests/functional -v
 
 [testenv:flake8]
