--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ basepython = python2.7
 commands =
     pip install git+git://github.com/k4nar/circus.git@onitu
     pip install -e .[tests,bench]
+    pip install -e tests/utils/test_driver
     py.test tests/benchmarks -v
 
 [testenv:py33-bench]
@@ -25,10 +26,12 @@ basepython = python3.3
 commands =
     pip install git+git://github.com/k4nar/circus.git@onitu
     pip install -e .[tests,bench]
+    pip install -e tests/utils/test_driver
     py.test tests/benchmarks -v
 
 [testenv:benchmarks]
 commands =
     pip install git+git://github.com/k4nar/circus.git@onitu
     pip install -e .[bench]
+    pip install -e tests/utils/test_driver
     python -m tests.benchmarks.benchmarks
