Supporting oauth for hubic

--- a/drivers/hubic/manifest.json
+++ b/drivers/hubic/manifest.json
@@ -10,7 +10,8 @@
     "changes_timer": {
       "name": "Changes Timer",
       "description": "Time between each change check. In seconds.",
-      "type": "integer"
+      "type": "integer",
+      "default": 60
     },
     "client_id": {
       "name": "Application Hubic ID",
