--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,9 +6,7 @@ environment:
     - PYTHON: "C:/Python34"
 
 install:
-  - "Install-Package LevelDB"
-  - ps: "Get-ChildItem C:/ -name db.h -recurse"
-  - ps: "Get-ChildItem C:/ -name leveldb.lib -recurse"
+  - "msbuild.exe"
 
 build: off
 deploy: off
