--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,8 +5,12 @@ environment:
     - PYTHON: "C:/Python27"
     - PYTHON: "C:/Python34"
 
+  global:
+      - BOOST_ROOT: "C:\Libraries\boost"
+
 install:
   - "git clone https://github.com/bureau14/leveldb.git"
+  - "ls C:\Libraries\boost"
   - "cd leveldb/ && cmake ."
 
 build: off
