--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,11 +6,11 @@ environment:
     - PYTHON: "C:/Python34"
 
   global:
-    BOOST_ROOT: "C:\Libraries\boost"
+    BOOST_ROOT: "C:/Libraries/boost"
 
 install:
   - "git clone https://github.com/bureau14/leveldb.git"
-  - "ls C:\Libraries\boost"
+  - "ls C:/Libraries/boost"
   - "cd leveldb/ && cmake ."
 
 build: off
