--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,8 +10,8 @@ environment:
 
 install:
   - "git clone https://github.com/bureau14/leveldb.git"
-  - "cd leveldb/ && cmake ."
-  - "tree leveldb/"
+  - "cmake leveldb/"
+  - "tree ."
 
 build: off
 deploy: off
