--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,11 +9,18 @@ environment:
     BOOST_ROOT: "C:/Libraries/boost"
 
 install:
+  - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x86 /release'
+  - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
+  - ps: (new-object net.webclient).DownloadFile('https://raw.github.com/pypa/pip/master/contrib/get-pip.py', 'C:/get-pip.py')
+  - "%PYTHON%/Scripts/easy_install.exe C:/pywin32-219.win32-py2.7.exe"
+  - "%PYTHON%/python.exe C:/get-pip.py"
   - "git clone https://github.com/onitu/leveldb.git"
   - "cd leveldb/"
   - "cmake ."
-  - "msbuild leveldb.sln"
-  - ps: "Get-ChildItem . -recurse"
+  - "msbuild leveldb.sln > build.log"
+  - "cp Debug/leveldbd.lib %PYTHON%/libs/"
+  - "cp include/leveldb %PYTHON%/Include"
+  - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
 
 build: off
 deploy: off
