--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ install:
   - "git clone https://github.com/onitu/leveldb.git"
   - "cd leveldb/"
   - "cmake ."
-  - "msbuild leveldb.sln > build.log"
+  - "msbuild leveldb.sln"
   - "cp Debug/leveldbd.lib %PYTHON%/libs/"
   - "cp include/leveldb %PYTHON%/Include"
   - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
