--- a/drivers/sftp/manifest.json
+++ b/drivers/sftp/manifest.json
@@ -2,11 +2,6 @@
   "name": "SFTP",
   "description": "Store files on a remote machine using SFTP.",
   "options": {
-    "root": {
-      "name": "Root",
-      "description": "The root of the directories under Onitu's watch",
-      "type": "string"
-    },
     "hostname": {
       "name": "Hostname",
       "description": "The hostname for the SFTP connection",
@@ -19,7 +14,7 @@
     },
     "password": {
       "name": "Password",
-      "description": "The password for the SFTP connection (if empty or missing, the private key will be used)",
+      "description": "The password for the SFTP connection. You must use either this or a private key.",
       "type": "string",
       "default": ""
     },
@@ -37,13 +32,13 @@
     },
     "private_key_path": {
       "name": "Private key path",
-      "description": "The path to your private key file (optionnal)",
+      "description": "The path to your private key file. You must use either this or a password.",
       "type": "string",
-      "default": "~/.ssh/id_rsa"
+      "default": ""
     },
     "private_key_passphrase": {
       "name": "Private key passphrase",
-      "description": "The passphrase for your private key (optionnal if no private_key_path setted)",
+      "description": "The passphrase for your private key (if using one)",
       "type": "string",
       "default": ""
     }
