Adapt the SFTP test driver to new architecture

--- a/drivers/sftp/manifest.json
+++ b/drivers/sftp/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "SFTP",
+  "name": "sftp",
   "description": "Store files on a remote machine using SFTP.",
   "options": {
     "hostname": {
