--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,8 +19,8 @@ install:
   - "msbuild leveldb.sln"
   - "cp Debug/leveldbd.lib %PYTHON%/libs/"
   - "cp port/win/stdint.h %PYTHON%/Include"
-  - ps: "New-Item %PYTHON%/Include/leveldb -itemtype directory"
-  - "cp include/leveldb/*.h %PYTHON%/Include/leveldb/"
+  - ps: "New-Item %PYTHON%/Include/leveldb/ -itemtype directory"
+  - "cp include/leveldb/*.h %PYTHON%/Include/leveldb"
   - "cd ../"
   - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
 
