--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ install:
   - "msbuild leveldb.sln"
   - "cp Debug/leveldbd.lib %PYTHON%/libs/"
   - "cp port/win/stdint.h %PYTHON%/Include"
-  - ps: "Copy-Item include/leveldb %PYTHON%/Include -recurse"
+  - ps: "Copy-Item include/leveldb $(Env:PYTHON)/Include -recurse"
   - ps: "Get-ChildItem %PYTHON%/Include -recurse"
   - "cd ../"
   - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
