--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,8 +10,7 @@ environment:
 
 install:
   - nuget install LevelDB
-  - cd LevelDB
-  - msbuild .
+  - msbuild LevelDB-*
   # - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
   # - ps: (new-object net.webclient).DownloadFile('https://raw.github.com/pypa/pip/master/contrib/get-pip.py', 'C:/get-pip.py')
   # - "%PYTHON%/python.exe C:/get-pip.py"
