try another time with nuget

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,22 +9,24 @@ environment:
     BOOST_ROOT: "C:/Libraries/boost"
 
 install:
-  - set CMAKE_GENERATOR="Visual Studio 12"
-  - set BOOST_DEFINITIONS=-DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_ROOT%/lib32-msvc-12.0"
-  - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
-  - ps: (new-object net.webclient).DownloadFile('https://raw.github.com/pypa/pip/master/contrib/get-pip.py', 'C:/get-pip.py')
-  - "%PYTHON%/python.exe C:/get-pip.py"
-  - "%PYTHON%/Scripts/easy_install.exe C:/pywin32-219.win32-py2.7.exe"
-  - "git clone https://github.com/onitu/leveldb.git"
-  - "cd leveldb/"
-  - "cmake . -G %CMAKE_GENERATOR% %BOOST_DEFINITIONS%"
-  - "msbuild leveldb.sln"
-  - "cp Debug/leveldbd.lib %PYTHON%/libs/leveldb.lib"
-  - "cp port/win/stdint.h %PYTHON%/Include"
-  - ps: "Copy-Item include/leveldb $Env:PYTHON/Include -recurse"
-  - ps: "Copy-Item C:/Libraries/boost/stage/lib/*.lib $Env:PYTHON/libs/"
-  - "cd ../"
-  - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
+- nuget install LevelDB
+- ps: "Get-ChildItem -Path . –Recurse"
+  # - set CMAKE_GENERATOR="Visual Studio 12"
+  # - set BOOST_DEFINITIONS=-DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_ROOT%/lib32-msvc-12.0"
+  # - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
+  # - ps: (new-object net.webclient).DownloadFile('https://raw.github.com/pypa/pip/master/contrib/get-pip.py', 'C:/get-pip.py')
+  # - "%PYTHON%/python.exe C:/get-pip.py"
+  # - "%PYTHON%/Scripts/easy_install.exe C:/pywin32-219.win32-py2.7.exe"
+  # - "git clone https://github.com/onitu/leveldb.git"
+  # - "cd leveldb/"
+  # - "cmake . -G %CMAKE_GENERATOR% %BOOST_DEFINITIONS%"
+  # - "msbuild leveldb.sln"
+  # - "cp Debug/leveldbd.lib %PYTHON%/libs/leveldb.lib"
+  # - "cp port/win/stdint.h %PYTHON%/Include"
+  # - ps: "Copy-Item include/leveldb $Env:PYTHON/Include -recurse"
+  # - ps: "Copy-Item C:/Libraries/boost/stage/lib/*.lib $Env:PYTHON/libs/"
+  # - "cd ../"
+  # - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
 
 build: off
 deploy: off
