--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ environment:
     BOOST_ROOT: "C:/Libraries/boost"
 
 install:
-  - "hg clone hg clone ssh://hg@bitbucket.org/robertvazan/leveldb-windows"
+  - "hg clone ssh://hg@bitbucket.org/robertvazan/leveldb-windows"
   - "cd leveldb-windows"
   - "nuget restore *.sln"
   # - set CMAKE_GENERATOR="Visual Studio 12"
