--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ environment:
 install:
   - "hg clone https://bitbucket.org/robertvazan/leveldb-windows"
   - "cd leveldb-windows"
+  - 'Get-ChildItem -path . -recurse'
   - "nuget restore *.sln"
   # - set CMAKE_GENERATOR="Visual Studio 12"
   # - set BOOST_DEFINITIONS=-DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_ROOT%/lib32-msvc-12.0"
