--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ install:
   - "hg clone https://bitbucket.org/robertvazan/leveldb-windows"
   - "cd leveldb-windows"
   - "nuget restore LevelDB.sln"
-  - "msbuild LevelDB/LevelDB.vcxproj"
+  - "msbuild LevelDB/LevelDB.sln"
   - ps: 'Get-ChildItem -path . -recurse'
   # - set CMAKE_GENERATOR="Visual Studio 12"
   # - set BOOST_DEFINITIONS=-DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_ROOT%/lib32-msvc-12.0"
