--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,29 +7,27 @@ environment:
 
   global:
     BOOST_ROOT: "C:/Libraries/boost"
+    CMAKE_GENERATOR: "Visual Studio 12"
+    BOOST_DEFINITIONS: -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_ROOT%/lib32-msvc-12.0"
+    VS100COMNTOOLS: %VS110COMNTOOLS%
+    VS90COMNTOOLS: %VS110COMNTOOLS%
 
 install:
-  - "hg clone https://bitbucket.org/robertvazan/leveldb-windows"
-  - "cd leveldb-windows"
-  - "nuget restore LevelDB.sln"
-  - "msbuild LevelDB/LevelDB.sln"
-  - ps: 'Get-ChildItem -path . -recurse'
-  # - set CMAKE_GENERATOR="Visual Studio 12"
-  # - set BOOST_DEFINITIONS=-DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_ROOT%/lib32-msvc-12.0"
-  # - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
-  # - ps: (new-object net.webclient).DownloadFile('https://raw.github.com/pypa/pip/master/contrib/get-pip.py', 'C:/get-pip.py')
-  # - "%PYTHON%/python.exe C:/get-pip.py"
-  # - "%PYTHON%/Scripts/easy_install.exe C:/pywin32-219.win32-py2.7.exe"
-  # - "git clone https://github.com/onitu/leveldb.git"
-  # - "cd leveldb/"
-  # - "cmake . -G %CMAKE_GENERATOR% %BOOST_DEFINITIONS%"
-  # - "msbuild leveldb.sln"
-  # - "cp Debug/leveldbd.lib %PYTHON%/libs/leveldb.lib"
-  # - "cp port/win/stdint.h %PYTHON%/Include"
-  # - ps: "Copy-Item include/leveldb $Env:PYTHON/Include -recurse"
-  # - ps: "Copy-Item C:/Libraries/boost/stage/lib/*.lib $Env:PYTHON/libs/"
-  # - "cd ../"
-  # - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
+  - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
+  - ps: (new-object net.webclient).DownloadFile('https://raw.github.com/pypa/pip/master/contrib/get-pip.py', 'C:/get-pip.py')
+  - "%PYTHON%/python.exe C:/get-pip.py"
+  - "%PYTHON%/Scripts/easy_install.exe C:/pywin32-219.win32-py2.7.exe"
+  - "git clone https://github.com/onitu/leveldb.git"
+  - "cd leveldb/"
+  - "cmake . -G %CMAKE_GENERATOR% %BOOST_DEFINITIONS%"
+  - "msbuild leveldb.sln"
+  - ps: "Get-ChildItem -path . -recurse"
+  - "cp Debug/leveldbd.lib %PYTHON%/libs/leveldb.lib"
+  - "cp port/win/stdint.h %PYTHON%/Include"
+  - ps: "Copy-Item include/leveldb $Env:PYTHON/Include -recurse"
+  - ps: "Copy-Item C:/Libraries/boost/stage/lib/*.lib $Env:PYTHON/libs/"
+  - "cd ../"
+  - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
 
 build: off
 deploy: off
