--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,9 +8,9 @@ environment:
   global:
     BOOST_ROOT: "C:/Libraries/boost"
     CMAKE_GENERATOR: "Visual Studio 12"
-    BOOST_DEFINITIONS: -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_ROOT%/lib32-msvc-12.0"
-    VS100COMNTOOLS: %VS110COMNTOOLS%
-    VS90COMNTOOLS: %VS110COMNTOOLS%
+    BOOST_DEFINITIONS: "-DBOOST_ROOT=%BOOST_ROOT% -DBOOST_LIBRARYDIR=%BOOST_ROOT%/lib32-msvc-12.0"
+    VS100COMNTOOLS: "%VS110COMNTOOLS%"
+    VS90COMNTOOLS: "%VS110COMNTOOLS%"
 
 install:
   - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
