--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ environment:
   global:
     BOOST_ROOT: "C:/Libraries/boost"
     CMAKE_GENERATOR: "Visual Studio 12"
-    BOOST_DEFINITIONS: "-DBOOST_ROOT=%BOOST_ROOT% -DBOOST_LIBRARYDIR=%BOOST_ROOT%/lib32-msvc-12.0"
+    BOOST_DEFINITIONS: -DBOOST_ROOT="%BOOST_ROOT"% -DBOOST_LIBRARYDIR="%BOOST_ROOT%/lib32-msvc-12.0"
     VS100COMNTOOLS: "%VS110COMNTOOLS%"
     VS90COMNTOOLS: "%VS110COMNTOOLS%"
 
